--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -15,6 +15,7 @@
 	var socket;
 	var socketEvents;
   var gameCode;
+  var deck;
   var gameEnded = false;
 	var gameContainer;
 
@@ -301,7 +302,7 @@
 
 	}
 
-	var setupDecider = function() {
+	var setupDecider = function(deck) {
 
     isDecider = true;
 
@@ -317,7 +318,12 @@
 	    $('#decider .create').hide();
       $('#decider').show();
       $('#decider .waiting, #decider-debugging').show();
+
+	      
 		}
+
+		if(deck)
+			$('.waiting .deck').text(deck);
 
     // Create uid for player
     playerUID = Math.floor(Math.pow(10, 10-1) + Math.random() * (Math.pow(10, 10) - Math.pow(10, 10-1) - 1));
@@ -439,6 +445,7 @@ window.onload = function() {
 				data.deckId = $("#decks button.active").map(function(){
 											    return $(this).val();
 											 }).get()[0];
+				deck = $("#decks button.active").text();
 				data.accessCode = gameCode;
 
 			  $.post(
@@ -448,7 +455,7 @@ window.onload = function() {
 
 						if(data.sessionCreated) {
 
-							setupDecider();
+							setupDecider(deck);
 							
 							$('#login').remove();
 
