--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -1,6 +1,6 @@
 #gameContent {
 	background-color: $color-turquoise;
-	height: 100%;
+	// height: 100%;
 	text-align: center;
 	padding: 40px;
 	padding-top: 80px;
@@ -49,7 +49,7 @@
 		color: black;
 
 		#logo-bar {
-			display: block !important;
+			// display: block !important;
 			position: absolute;
 			top: 0px;
 			left: 0px;
@@ -76,6 +76,7 @@
 	display: inline-block;
 	padding:0px;
 	background-color: grey;
+	color: white;
 
 	p {
 		display: inline;
@@ -109,7 +110,6 @@
 
 }
 
-
 .form {
 	&.decider, &#decider, &#decider-controls {
 		position: absolute;
@@ -136,40 +136,13 @@
 	}
 }
 
-
-
-
-.room-container {
-	bottom: 10%;
-	padding-left: 10%;
-  padding-right: 10%;
-	position: relative;
-	margin: 10px auto;
-	background-color: white;
-	color: black;
-  // min-height: 250px;
-  // display: table-cell;
-  // vertical-align: middle;
-
-	h1 {
-		font-size: 6em;
-	}
-
-	@if (section &) {
-		@at-root section {
-			height: 100%;
-			width: 100%;
-			// display: table;
+// LOGIN
+#begin {
+	&.waiting {
+		#login-header {
+			display: none;
 		}
 	}
-
-}
-
-// LOGIN
-
-#decider, #login {
-	// display: table-cell;
-	// vertical-align: middle;
 }
 
 #login-header {
