--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -310,16 +310,16 @@
     if(!gameCode) {
 	    gameCode = '{{accessCode}}';
 
-	    $('#player-name').val('Player_' + Math.floor(Math.random() * (10 - 1 + 1)) + 1);
-
 	    // Ensure login is gone and all decide UI shows
-	    $('#login').remove();
+	    $('#name,#join').remove();
 	    $('.access-code').text(gameCode);
 	    $('#decider .create').hide();
       $('#decider').show();
       $('#decider .waiting, #decider-debugging').show();
+      $('#begin').addClass('waiting');
 
-	      
+	    $('#player-name').val('Player_' + Math.floor(Math.random() * (10 - 1 + 1)) + 1);
+
 		}
 
 		if(deck)
