--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,18 +11,19 @@
   <div class="row top">
     {{!-- TOP SECTION/LANDING --}}
     <div class="top-section">
-      <div class="landing-header">
-        <span class="whats">what's</span></br><span class="at-sign">@</span><span class="header-stake">stake?</span>
+      <div class="top-header col-sm-12 col-centered">
+        <div class="landing-header"><span class="whats">what's</span></br><span class="at-sign">@</span><span class="header-stake">stake?</span></div>
       </div>
       <div class="play-button"></div>
     </div>
+    <img class="landing-image" src="http://res.cloudinary.com/engagement-lab-home/image/upload/v1487958967/at-stake-site/stakewhitecropped.png">
   </div>
   
   {{!-- GAME PITCH --}}
   <div class="row pitch">
-  <div class="phone-pic col-lg-4 col-sm-12"><img class="showcaseImage" src="{{{cloudinaryUrl content.showcaseImage width=auto height=350 crop='scale' quality=100}}}"></div>
-    <div class="game-pitch col-lg-8 col-sm-10">
-      <div class="half-1 col-lg-10 col-sm-12 col-centered">
+  <div class="phone-pic col-md-5"><img class="showcaseImage" src="{{{cloudinaryUrl content.showcaseImage width=auto height=400 crop='scale' quality=100}}}"></div>
+    <div class="game-pitch col-md-7">
+      <div class="half-1 col-sm-12 col-centered">
         <h4 class="tagline">{{{content.tagline.html}}}</h4>
         <div class="cta-para-one">{{{content.ctaParagraphOne.html}}}</div>
         <div class="cta-para-two">{{{content.ctaParagraphTwo.html}}}</div>
@@ -74,23 +75,25 @@
   </div>
 
   {{!-- CREDITS --}}
-  <div class="credits row">
-  	<div class="design-dev-team col-lg-12 col-sm-12 col-centered">
+  <div class="credits row col-sm-12 col-centered">
+  	<div class="design-dev-team">
 	    <h3>Design and Development Team</h3>
 	    <div class="team row pi"><h5 class="team-title">Principal Investigator </h5>{{content.principalInvestigator.name}}</div>
-      <div class="row" style="padding:0px">
-        <div class="team-1-half col-sm-6">
-    	    <div class="team row"><h5 class="team-title">Product Manager </h5>{{content.productManager.name}}</div>
-    	    <div class="team row"><h5 class="team-title">Lead Developer </h5>{{content.leadDeveloper.name}}</div>
-          <div class="team row"><h5 class="team-title">Game Designer </h5>{{content.otherGameDesigner.name}}, {{content.gameDesigner.name}}</div>
-          <div class="team row"><h5 class="team-title">Production Assistant </h5>{{content.productionAssistant.name}}</div>
-        </div>
-        <div class="team-2-half col-sm-6">
-          <div class="team row"><h5 class="team-title">Project Manager </h5>{{content.projectManager.name}}</div>
-          <div class="team row"><h5 class="team-title">Art Director </h5>{{content.artDirector.name}}</div>
-    	    <div class="team row"><h5 class="team-title">Junior Developer </h5>{{content.juniorDeveloper.name}}</div>
-    	    <div class="team row"><h5 class="team-title">Production Assistant </h5>{{content.otherProductionAssistant.name}}</div>
-        </div>
+      <div class="team-row row" style="padding:0px">
+  	    <div class="team left"><h5 class="team-title">Product Manager </h5>{{content.productManager.name}}</div>
+  	    <div class="team right"><h5 class="team-title">Project Manager </h5>{{content.projectManager.name}}</div>
+      </div>
+      <div class="team-row row" style="padding:0px">
+        <div class="team left"><h5 class="team-title">Lead Developer </h5>{{content.leadDeveloper.name}}</div>
+        <div class="team right"><h5 class="team-title">Art Director </h5>{{content.artDirector.name}}</div>
+      </div>
+      <div class="team-row row" style="padding:0px">
+        <div class="team left"><h5 class="team-title">Game Designer </h5>{{content.otherGameDesigner.name}}, {{content.gameDesigner.name}}</div>
+        <div class="team right"><h5 class="team-title">Junior Developer </h5>{{content.juniorDeveloper.name}}</div>
+      </div>
+      <div class="team-row row" style="padding:0px">
+       <div class="team left"><h5 class="team-title">Production Assistant </h5>{{content.productionAssistant.name}}</div>
+  	   <div class="team right"><h5 class="team-title">Production Assistant </h5>{{content.otherProductionAssistant.name}}</div>
       </div>
     </div>
     <div class="el-logo">
