--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -101,7 +101,7 @@ var playerLogin = function(data) {
 */
 var checkIfLoggedIn = function() {
 
-        console.log("checking player");
+        {{!-- console.log("checking player"); --}}
 
     // Disallow private/incognito
     if(isPrivate) {
