--- a/templates/partials/css.hbs
+++ b/templates/partials/css.hbs
@@ -42,8 +42,6 @@
 	
 	<!-- Custom fonts -->
 	<link href="/fonts/fonts.css" rel="stylesheet"/>
-	
-	<link href="/bower_components/flipclock/compiled/flipclock.css" rel="stylesheet">
 
 	<!-- Font Awesome CSS -->
 	<link href="/fonts/icons/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -53,6 +51,7 @@
 
 	{{!-- Bower plugins --}}
 	<link rel="stylesheet" href="/bower_components/glidejs/dist/css/glide.core.css">
+	<link rel="stylesheet" href="/bower_components/glidejs/dist/css/glide.theme.css">
 
 {{else}}
 
