--- a/templates/partials/script/development.hbs
+++ b/templates/partials/script/development.hbs
@@ -35,6 +35,9 @@
 {{!-- Sound --}}
 <script type="text/javascript" src="/bower_components/ion-sound/js/ion.sound.js"></script>
 
+{{!-- Glide javascript --}}
+<script type="text/javascript" src="/bower_components/glidejs/dist/glide.js"></script>
+
 {{!-- GSAP Timeline --}}
 <script type="text/javascript" src="/plugins/gsap-timeline-slider.js"></script>
 
