--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -9,9 +9,9 @@
   <div class="lobby" id="name" class="col-sm-12">
     <div class="form col-xs-12 col-centered">
 
-      <input type="text" id="player-name" placeholder="Type your name here"> <br />
+      <input type="text" id="player-name" placeholder="Type your name here" class="hidden-el"> <br />
       <div class="error">Error!</div>
-      <input id="btn_submit_name" data-package='{"name": "#player-name"}' class="btn btn-default submit_name" type="submit" name="submit" value="play">
+      <input id="btn_submit_name" data-package='{"name": "#player-name"}' class="btn btn-default submit_name hidden-el" type="submit" name="submit" value="play">
 
       <section id="description">
         <p>@Stake was created to help facilitate productive and fair conversations in classrooms, conferences, strategic board meetings, and public events. By playing @Stake, participants learn that productive conversations thrive off of authentic listening and multiple perspectives. All you need to get started is 3-5 players.</p>
@@ -34,6 +34,8 @@
         <p>use your 4 digit room code to join a game</p>
       </div>
 
+      <button class="back-button" data-from="choices" data-to="name">back</button>
+
     </div>
   </div>
 
@@ -41,8 +43,10 @@
   <div class="lobby form" id="join" style="display:none">
 
     <div class="login input">
-      <input type="text" id="access_code" placeholder="Type your room code here"> <br />
+      <input type="text" id="access_code" placeholder="Type your room code here" maxlength="4"> <br />
       <div class="error">Error!</div>
+
+      <button class="back-button" data-from="join" data-to="choices">back</button>
       <input id="btn_submit_code"  data-event="game:entry" data-package='{"code": "#access_code", "name": "#player-name"}' class="btn btn-default game_login" type="submit" name="submit" value="play">
     </div>
 
@@ -57,19 +61,17 @@
   {{!-- NEW GAME --}}
   <div class="lobby" id="decider" style="display:none">
     <div class="submission">
-      <div class="form create col-sm-6 col-centered">
- {{!--        <div class="form-prompt white">access code:</div>
-        <div class="access-code"></div> --}}
-        <h2>Select a deck</h2>
+      <div class="form create col-sm-12 col-lg-6 col-centered">
+
         <h3>Your deck will determine what problems you solve and what roles you get to play.</h3>
-        <br />
         <div class="form-prompt white">select the deck to use:</div>
         
-        <section id="decks">
+        <section id="decks" class="glide">
 
         </section>
         
         <div class="error">Error!</div>
+        <button class="back-button" data-from="new" data-to="choices">back</button>
         <input id="btn_submit" class="button_text" type="submit" name="submit" value="Start!">
       </div>
     </div>
