--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -1,7 +1,7 @@
 <section id="begin">
 
   <div id="login-header">
-    <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
+    <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png" width=300px>
     <p>A Game for Deliberative Democracy</p>
   </div>
 
